# elastic-map-merge-3D

./: README.md
elastic_map_merge_3d/: CMakeLists.txt  LICENSE  package.xml  setup.py
elastic_map_merge_3d/include/elastic_map_merge_3d/: elastic_map_merge_node.h  elastic_map_merging.h  features.h  graph_slam.h  information_matrix_calculator.h  keyframe.h  keyframe_map_assembler.h  loop_detector.h  registrations.h  ros_utils.h  typedefs.h
elastic_map_merge_3d/launch/: elastic_map_merge.launch
elastic_map_merge_3d/msg/: KF.msg  Keyframes_Graph.msg
elastic_map_merge_3d/src/: elastic_map_merge_node.cpp  elastic_map_merging.cpp  features.cpp  graph_slam.cpp  information_matrix_calculator.cpp  keyframe.cpp  keyframe_map_assembler.cpp  map2odom_publisher.py  registrations.cpp
